# zotero-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: errors.rs  lib.rs
src/asynchronous/: mod.rs
src/synchronous/: mod.rs
tests/: test_asynchronous.rs  test_mocks.rs  test_synchronous.rs
