[package]
name = "zotero-rs"
version = "0.2.5"
edition = "2021"
authors = ["Adrian Gao <adrian.gao@outlook.com>"]
description = "A Rust library for interacting with the Zotero API"
license = "MIT"
repository = "https://github.com/mgao6767/zotero-rs"
documentation = "https://docs.rs/zotero-rs"
keywords = ["zotero", "bibliography", "api", "library"]
categories = ["api-bindings", "web-programming"]

[lib]
name = "zotero_rs"
path = "src/lib.rs"

[dependencies]
bytes = "1.10.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"

[dev-dependencies]
chrono = "0.4.39"
dotenv = "0.15.0"
httpmock = "0.7.0"
